# lem-in

./: .gitignore  CMakeLists.txt  Makefile  README.md  lem-in  map.lemin_map  test.c  test_map
SDL2_primitives/: SDL2_framerate.h  SDL2_gfxPrimitives.h  SDL2_imageFilter.c  SDL2_rotozoom.h
flem-in/: lem-in.c  lem-in.h  lem-in_typedefs.h  lemin_parse.c
flemin/: circle.c  lemin.c  lemin.h  lemin_exit.c  lemin_find_ways.c  lemin_mark_graph.c  lemin_move_ants.c  lemin_parse.c  lemin_parse_ants.c  lemin_parse_links.c  lemin_parse_rooms.c  lemin_parse_valid_link.c  lemin_parse_valid_room.c  lemin_solution.c  lemin_split_ants.c  lemin_typedefs.h  lemin_utils.c  lemin_valid_link.c  lemin_vis.c  lemin_vis_handle_events.c  lemin_vis_keys.c  lemin_vis_mouse.c  lemin_vis_parse.c  lemin_vis_render_ants.c  lemin_vis_render_bg.c  lemin_vis_render_text.c
includes/: lemin.h  lemin_errors.h  lemin_structures.h  lemin_vis.h  lemin_vis_structures.h
lem-in_maps/multiple_ways/: two_ways_collision  two_ways_long
libft/: Makefile  ft_strncmp.c  libft.h
libft/ft_gnl/includes/: ft_gnl_typedefs.h
libft/ft_gnl/srcs/: ft_gnl.c
libft/ft_printf/includes/: ft_printf.h
libft/ft_printf/srcs/: ft_printf.c  ft_printf_0_base.c  ft_printf_color.c  ft_printf_cspf.c  ft_printf_diouxx.c  ft_printf_fill_funs.c  ft_printf_hash_zero_blank_plus.c  ft_printf_lhllhhl.c  ft_printf_mod0_b_cap_udo.c  ft_printf_parce_funs.c  ft_printf_parse.c  ft_printf_prec.c  ft_printf_r.c  ft_printf_unicode.c  ft_printf_width.c  ft_printf_zjt.c
libft/includes/: libft.h
libft/srcs/: ft_atoibase.c
libft/vis/: ft_aaline.c  ft_aaline_thin.c  vis.h  vis_line_gradient.c  vis_typedefs.h
libs/SDL2/Darwin/: libSDL2.dylib
libs/SDL2/Linux/: libSDL2-2.0.so.0.9.0
libs/SDL2/includes/: SDL_thread.h
libs/SDL2_gfx/: libSDL2_gfx-1.0.0.dylib
libs/SDL2_gfx/Linux/: libSDL2_gfx-1.0.so.0.0.2
libs/SDL2_ttf/Darwin/: libSDL2_ttf.dylib
libs/SDL2_ttf/Linux/: libSDL2_ttf-2.0.so.0.14.0
srcs/: ft_aaline.c  ft_aaline_thin.c  lemin.c  lemin_exit.c  lemin_find_ways.c  lemin_mark_graph.c  lemin_move_ants.c  lemin_parse.c  lemin_parse_ants.c  lemin_parse_links.c  lemin_parse_rooms.c  lemin_parse_valid_link.c  lemin_parse_valid_room.c  lemin_split_ants.c  lemin_utils.c  lemin_vis.c  lemin_vis_keys.c  lemin_vis_mouse.c  lemin_vis_parse.c  lemin_vis_render_ants.c  lemin_vis_render_bg.c  lemin_vis_render_text.c  vis_line_gradient.c
